--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.4.1",
+    "octokit": "^3.1.1",
+    "ofetch": "^1.3.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -22,10 +25,13 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.0.6",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
